Fix HeadlessException in mock GUI constructors and missing MockProcessBuilder factory
  - Add stub GraphicsConfiguration/GraphicsDevice so Window.initGC() never
    calls getDefaultScreenDevice() (returns null on headless servers)
  - Swap HeadlessToolkit for the underlying real toolkit during mock
    construction to avoid HeadlessException from getScreenInsets()
  - Route all MockJFrame/MockFrame/MockWindow/MockJDialog constructors
    through GC-accepting super overloads with the stub GC
  - Wrap MockJFileChooser.updateUI() with headless bypass to prevent
    DropTarget from throwing HeadlessException
  - Add --add-opens for java.desktop/sun.java2d and sun.awt
  - Add missing MockProcessBuilder constructor factory methods